[BACKLOG-39562] Java 17 updates