@@ -25,6 +25,7 @@
     <javassist.version>3.20.0-GA</javassist.version>
     <htmlunit.version>2.19</htmlunit.version>
     <tapestry-framework.version>4.1.6</tapestry-framework.version>
+    <maven-surefire-plugin.argLine> --add-opens=java.base/java.lang=ALL-UNNAMED </maven-surefire-plugin.argLine>
   </properties>
 
   <dependencies>
